deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: sea-battle
  labels:
    app: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: leschah/battleship-backend:v20
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              protocol: TCP
