deploy/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sea-battle-frontend
  namespace: sea-battle
  labels:
    app: sea-battle-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sea-battle-frontend
  template:
    metadata:
      labels:
        app: sea-battle-frontend
    spec:
      containers:
        - name: sea-battle-frontend
          image: leschah/sea-battle-frontend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
