deploy/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sea-battle-frontend-service
  namespace: sea-battle
spec:
  selector:
    app: sea-battle-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
