deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: sea-battle
spec:
  type: NodePort
  selector:
    app: backend
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30080
